More spacing fixes

--- a/static/sass/styles.scss
+++ b/static/sass/styles.scss
@@ -227,6 +227,10 @@ pre {
   }
 }
 
+.u-margin-small--top {
+  margin-top: $sp-small !important;
+}
+
 .u-margin-medium--top {
   margin-top: $sp-medium !important;
 }
